--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        <article class="card card--profile">
 
         <div class="card__image-container">
-          <img src="assets/images/fotoperfil.jpeg" alt="fotoperfil">
+          <img src="assets/images/fotoperfil.jpeg" alt="">
         </div>
                   <!-- CONTENIDO PERFIL SECCIONES -->
 
