correcion salto de linea y ajuste resposive en mov

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             eficazmente tanto por iniciativa propia como parte de un equipo,
             mi postulación se dirige a empresas cuya visión,
             y objetivos se dedican al bienestar social y
-            al desarrollo <br> de la tecnología para beneficio humano.
+            al desarrollo de la tecnología para beneficio humano.
 
             <br/>
 
